--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.22.0",
     "express": "^4.13.3",
     "node-sass": "^3.4.1",
+    "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.3",
