--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "webpack-hot-middleware": "^2.5.0"
   },
   "dependencies": {
+    "history": "^1.13.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
     "redux": "^3.0.4",
+    "redux-simple-router": "0.0.8",
     "redux-thunk": "^1.0.0",
     "socket.io-client": "^1.3.7"
   }
