Added GenerateComponent cli util

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --progress --colors --watch",
     "start": "node webpack-dev-server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "util": "babel-node --presets es2015 utils"
   },
   "repository": {
     "type": "git",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/mjonathan/chatshop-client#readme",
   "devDependencies": {
+    "babel-cli": "^6.2.0",
     "babel-core": "^6.1.2",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.1.2",
@@ -23,6 +25,7 @@
     "css-loader": "^0.22.0",
     "express": "^4.13.3",
     "node-sass": "^3.4.1",
+    "output-file-sync": "^1.1.1",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
