--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "^3.0.4",
     "redux-simple-router": "0.0.8",
     "redux-thunk": "^1.0.0",
+    "reselect": "^2.0.1",
     "socket.io-client": "^1.3.7"
   }
 }
