--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/mjonathan/chatshop-client#readme",
   "devDependencies": {
-    "babel-cli": "^6.2.0",
-    "babel-core": "^6.1.2",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.1.2",
-    "babel-preset-react": "^6.1.2",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "css-loader": "^0.22.0",
     "express": "^4.13.3",
-    "node-sass": "^3.4.1",
+    "node-sass": "^3.4.2",
     "output-file-sync": "^1.1.1",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.3",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.5.0"
+    "webpack": "^1.12.11",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
     "history": "^1.13.1",
@@ -40,7 +40,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "redux": "^3.0.4",
-    "redux-simple-router": "0.0.8",
+    "redux-simple-router": "^1.0.2",
     "redux-thunk": "^1.0.0",
     "reselect": "^2.0.1",
     "socket.io-client": "^1.3.7"
