--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "output-file-sync": "^1.1.1",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.1",
+    "shortid": "^2.2.4",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.4.0",
