--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "output-file-sync": "^1.1.1",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.1",
-    "shortid": "^2.2.4",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.11",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "classnames": "^2.2.3",
     "history": "^1.13.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
@@ -44,6 +44,7 @@
     "redux-simple-router": "^1.0.2",
     "redux-thunk": "^1.0.0",
     "reselect": "^2.0.1",
+    "shortid": "^2.2.4",
     "socket.io-client": "^1.3.7"
   }
 }
